--- a/among.html
+++ b/among.html
@@ -1,3 +1,4 @@
+<html>
 <body  style="background-color: rgb(0, 0, 0); color: rgb(255, 255, 255);">
 
     <head><title>Learning HTML - Tutorial</title></head>
@@ -67,3 +68,4 @@ img {
         <a href="https://github.com/ComradeJustin" style="text-align: left;position: fixed;bottom: 15px;left: 14px;color: #ffffff;">ඞ My Github! ඞ</a>
     <body>
 </body>
+        </html>
